# mirrativ-app

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.claude/: settings.local.json
docs/: mirrativ-endpoints-response-summary.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mpv_player.rs
src-tauri/src/mirrativ/: error.rs  mod.rs
src-tauri/src/mirrativ/client/: analytics.rs  app.rs  auth.rs  broadcast.rs  catalog.rs  closet.rs  complex.rs  core.rs  device.rs  event.rs  gift.rs  live.rs  misc.rs  mission.rs  mod.rs  notice.rs  onboarding.rs  ranking.rs  season.rs  social.rs  user.rs
src-tauri/src/mirrativ/client/llstream_relay/: http.rs  mod.rs  mux.rs  parser.rs  ws.rs
src/lib/components/: FollowPage.svelte  HomePage.svelte  LiveCard.svelte  LoginPage.svelte  ProfilePage.svelte  SearchPage.svelte  Sidebar.svelte  Streampage.svelte  UserCard.svelte  WatchPage.svelte  debugpage.svelte
src/lib/components/search/: SearchControls.svelte  SearchRecommend.svelte  SearchResults.svelte  SearchUserDetail.svelte  search-utils.ts
src/lib/components/ui/: ErrorMessage.svelte  Skeleton.svelte
src/lib/components/watch/: WatchCommentsPanel.svelte  WatchHeader.svelte  WatchInfoPanel.svelte  WatchJoin.svelte  WatchPlayer.svelte  WatchPollingPanel.svelte  WatchRankingPanel.svelte  watch-broadcast.ts  watch-comments.ts  watch-logger.ts  watch-utils.ts
src/lib/stores/: llstream.ts  search.ts
src/routes/: +page.svelte
src/routes/player/: +page.svelte
static/: player.html
