[package]
name = "mirrativ-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mirrativ_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.13.1", features = ["json", "cookies", "gzip", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3"

url = "2"
uuid = { version = "1.20", features = ["v4"] }
rand = "0.10.0"
urlencoding = "2"
raw-window-handle = "0.6"

# libmpv for video playback (dynamic loading)
libloading = "0.9.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security_Cryptography",
] }

[profile.release]
strip = true
lto = true
panic = "abort"
